[gd_scene load_steps=10 format=3 uid="uid://c5es716vjhyof"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_7m711"]
[ext_resource type="FontFile" uid="uid://cv76mlfjxyexq" path="res://assets/fonts/bapka_pixel_big.fnt" id="3_8sjin"]
[ext_resource type="Texture2D" uid="uid://5ac012152q1n" path="res://assets/interface/pause.png" id="3_tp4ph"]
[ext_resource type="Texture2D" uid="uid://b1lwmlxw2xvp4" path="res://assets/interface/marshmallow_menu.png" id="3_uwlj2"]
[ext_resource type="Texture2D" uid="uid://cmrt3xoknb7jk" path="res://assets/interface/pause_pressed.png" id="4_lu3ij"]
[ext_resource type="Texture2D" uid="uid://chs03pp1q6boy" path="res://assets/temp/gameplay game over.png" id="5_4uhmh"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8jrle"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ilgqc"]

[sub_resource type="LabelSettings" id="LabelSettings_4uqfb"]
font_size = 13

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_7m711")

[node name="Bottom_left" type="MarginContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -21.0
offset_right = 83.0
grow_vertical = 0

[node name="info" type="Label" parent="Bottom_left"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Versão beta"
horizontal_alignment = 2

[node name="Top_right" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_bottom = 21.0
grow_horizontal = 0

[node name="HighScoreLabel" type="Label" parent="Top_right"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
horizontal_alignment = 2

[node name="CoinLabel" type="Label" parent="Top_right"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
horizontal_alignment = 2

[node name="Top_left" type="MarginContainer" parent="."]
self_modulate = Color(0.266667, 0.266667, 0.266667, 1)
offset_right = 69.0
offset_bottom = 21.0

[node name="ScoreLabel" type="Label" parent="Top_left"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")

[node name="HUD_gameplay" type="CanvasLayer" parent="."]

[node name="Top_center" type="MarginContainer" parent="HUD_gameplay"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="pause_button" type="TouchScreenButton" parent="HUD_gameplay/Top_center"]
z_index = 1
position = Vector2(-18, 0)
texture_normal = ExtResource("3_tp4ph")
action = "ui_cancel"

[node name="unpause_button" type="TouchScreenButton" parent="HUD_gameplay/Top_center"]
visible = false
z_index = 1
position = Vector2(-18, 0)
texture_normal = ExtResource("4_lu3ij")
action = "ui_cancel"

[node name="Bottom_right" type="MarginContainer" parent="HUD_gameplay"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0

[node name="fps" type="Label" parent="HUD_gameplay/Bottom_right"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
horizontal_alignment = 2

[node name="Center" type="MarginContainer" parent="HUD_gameplay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -24.0
offset_right = 0.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jump_button" type="TouchScreenButton" parent="HUD_gameplay/Center"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-395, -38)
scale = Vector2(791, 151.5)
texture_normal = SubResource("PlaceholderTexture2D_8jrle")
action = "ui_accept"

[node name="Game_Info_Label" type="Label" parent="HUD_gameplay/Center"]
texture_filter = 1
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Toque para começar"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HUD_gameover" type="CanvasLayer" parent="."]
visible = false

[node name="GameplayGameOver" type="Sprite2D" parent="HUD_gameover"]
visible = false
position = Vector2(133.5, 100)
texture = ExtResource("5_4uhmh")

[node name="Center" type="MarginContainer" parent="HUD_gameover"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -10.5
offset_right = 34.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2

[node name="title_screen_button" type="TouchScreenButton" parent="HUD_gameover/Center"]
modulate = Color(0, 0, 0, 0.2)
position = Vector2(-12, 47.5)
scale = Vector2(93, 16)
texture_normal = SubResource("PlaceholderTexture2D_ilgqc")

[node name="restart_button" type="TouchScreenButton" parent="HUD_gameover/Center"]
modulate = Color(0, 0, 0, 0.2)
position = Vector2(1, 22.5)
scale = Vector2(65, 15)
texture_normal = SubResource("PlaceholderTexture2D_ilgqc")
action = "ui_accept"

[node name="character_img" type="MarginContainer" parent="HUD_gameover"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -85.0
offset_right = 40.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(40, 48)

[node name="TextureRect" type="TextureRect" parent="HUD_gameover/character_img"]
layout_mode = 2
texture = ExtResource("3_uwlj2")

[node name="gameover txt" type="MarginContainer" parent="HUD_gameover"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -11.0
offset_right = 44.5
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game_over_msg" type="Label" parent="HUD_gameover/gameover txt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Você Derreteu..."
label_settings = SubResource("LabelSettings_4uqfb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_info" type="MarginContainer" parent="HUD_gameover"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 7.0
offset_right = -27.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="distance_msg" type="Label" parent="HUD_gameover/game_info"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Distancia: "
label_settings = SubResource("LabelSettings_4uqfb")
vertical_alignment = 1

[node name="restart_txt" type="MarginContainer" parent="HUD_gameover"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 13.0
offset_right = 29.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart_msg" type="Label" parent="HUD_gameover/restart_txt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Recomeçar"
label_settings = SubResource("LabelSettings_4uqfb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="title_screen_txt" type="MarginContainer" parent="HUD_gameover"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 39.0
offset_right = 42.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="title_screen_msg" type="Label" parent="HUD_gameover/title_screen_txt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Voltar ao Menu"
label_settings = SubResource("LabelSettings_4uqfb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="distance_value_msg" type="Label" parent="HUD_gameover"]
visible = false
offset_left = 74.0
offset_top = 97.0
offset_right = 129.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("3_8sjin")
label_settings = SubResource("LabelSettings_4uqfb")
vertical_alignment = 1

[node name="coins_msg" type="Label" parent="HUD_gameover"]
visible = false
offset_left = 134.0
offset_top = 97.0
offset_right = 183.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("3_8sjin")
text = "Moedas: "
label_settings = SubResource("LabelSettings_4uqfb")
vertical_alignment = 1

[node name="coins_value_msg" type="Label" parent="HUD_gameover"]
visible = false
offset_left = 184.0
offset_top = 97.0
offset_right = 233.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("3_8sjin")
label_settings = SubResource("LabelSettings_4uqfb")
vertical_alignment = 1

[connection signal="pressed" from="HUD_gameplay/Top_center/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="HUD_gameplay/Top_center/unpause_button" to="." method="_on_unpause_button_pressed"]
[connection signal="released" from="HUD_gameover/Center/title_screen_button" to="." method="_on_title_screen_button_released"]
[connection signal="released" from="HUD_gameover/Center/restart_button" to="." method="_on_restart_button_released"]
